--- a/sass/blocks/_profile-notifications.scss
+++ b/sass/blocks/_profile-notifications.scss
@@ -74,6 +74,8 @@
     cursor: pointer;
     user-select: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
   }
 
   &__item-header {
